mdapioutput/objects/Transfer__c.object
<CustomObject>
    <fields>
        <fullName>FromStoreId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Store</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipName>Transfer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FromUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TransferFrom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>StoreProductId__r.PharmaProductId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>System Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SignatureConfirmation__c</fullName>
        <label>Signature Confirmation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting for Audit</fullName>
                    <default>true</default>
                    <label>Waiting for Audit</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StoreProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store Product</label>
        <referenceTo>StoreProduct__c</referenceTo>
        <relationshipName>Transfer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ToStoreId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Store</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipName>Transfer1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ToUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TransferTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransferDate__c</fullName>
        <label>Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transfer__c</fullName>
        <formula>Name+&apos;, &apos;+   ToStoreId__r.AddressId__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transfer</label>
        <type>Text</type>
    </fields>
    <label>Sample Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Losses</fullName>
        <columns>NAME</columns>
        <columns>TransferDate__c</columns>
        <columns>Status__c</columns>
        <columns>Product__c</columns>
        <columns>Quantity__c</columns>
        <columns>ToUserId__c</columns>
        <columns>FromUserId__c</columns>
        <columns>ToStoreId__c</columns>
        <columns>FromStoreId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transfer__c.Loss</value>
        </filters>
        <label>Losses</label>
    </listViews>
    <listViews>
        <fullName>Returns</fullName>
        <columns>NAME</columns>
        <columns>TransferDate__c</columns>
        <columns>Status__c</columns>
        <columns>Product__c</columns>
        <columns>Quantity__c</columns>
        <columns>ToUserId__c</columns>
        <columns>FromUserId__c</columns>
        <columns>ToStoreId__c</columns>
        <columns>FromStoreId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transfer__c.Return</value>
        </filters>
        <label>Returns</label>
    </listViews>
    <listViews>
        <fullName>Shipments</fullName>
        <columns>NAME</columns>
        <columns>TransferDate__c</columns>
        <columns>Status__c</columns>
        <columns>Product__c</columns>
        <columns>Quantity__c</columns>
        <columns>ToUserId__c</columns>
        <columns>FromUserId__c</columns>
        <columns>ToStoreId__c</columns>
        <columns>FromStoreId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transfer__c.Shipment</value>
        </filters>
        <label>Shipments</label>
    </listViews>
    <listViews>
        <fullName>Technical</fullName>
        <columns>NAME</columns>
        <columns>TransferDate__c</columns>
        <columns>Status__c</columns>
        <columns>Product__c</columns>
        <columns>Quantity__c</columns>
        <columns>ToUserId__c</columns>
        <columns>FromUserId__c</columns>
        <columns>ToStoreId__c</columns>
        <columns>FromStoreId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transfer__c.Technical</value>
        </filters>
        <label>Technical</label>
    </listViews>
    <listViews>
        <fullName>Thefts</fullName>
        <columns>NAME</columns>
        <columns>TransferDate__c</columns>
        <columns>Status__c</columns>
        <columns>Product__c</columns>
        <columns>Quantity__c</columns>
        <columns>ToUserId__c</columns>
        <columns>FromUserId__c</columns>
        <columns>ToStoreId__c</columns>
        <columns>FromStoreId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transfer__c.Theft</value>
        </filters>
        <label>Thefts</label>
    </listViews>
    <listViews>
        <fullName>TransfersBetweenReps</fullName>
        <columns>NAME</columns>
        <columns>TransferDate__c</columns>
        <columns>Status__c</columns>
        <columns>Product__c</columns>
        <columns>Quantity__c</columns>
        <columns>ToUserId__c</columns>
        <columns>FromUserId__c</columns>
        <columns>ToStoreId__c</columns>
        <columns>FromStoreId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transfer__c.TransferReps</value>
        </filters>
        <label>Transfers Between Reps</label>
    </listViews>
    <nameField>
        <displayFormat>TRSF-{0000000}</displayFormat>
        <label>Sample Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Transaction</pluralLabel>
    <recordTypes>
        <fullName>Loss</fullName>
        <active>true</active>
        <label>Loss</label>
    </recordTypes>
    <recordTypes>
        <fullName>Return</fullName>
        <active>true</active>
        <label>Return</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shipment</fullName>
        <active>true</active>
        <label>Shipment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical</fullName>
        <active>true</active>
        <label>Technical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Theft</fullName>
        <active>true</active>
        <label>Theft</label>
    </recordTypes>
    <recordTypes>
        <fullName>TransferReps</fullName>
        <active>true</active>
        <label>Transfer Between Reps</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>